# goit-pyweb-hw-14

./: docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 06e4255e0bc0_add_users.py  1a86f73341dc_add_verify_email.py  62de54964549_add_reletionship.py  c357ba1b5069_init.py  c451df8a2cc5_add_verify_email.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: app_hw.py  users.py
src/routes/: app_hw.py  auth.py
src/schemas/: app_hw.py  user.py
src/services/: auth.py
tests/: test_e2e_auth.py  test_unit_repository_app_hw.py  test_unit_repository_users.py
